; ModuleID = '/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccgen.c_expr_or.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccgen.c_expr_or.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tok = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @expr_or to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @expr_or() #0 {
  %1 = call i32 (...) @expr_xor()
  br label %2

2:                                                ; preds = %6, %0
  %3 = load i8, i8* @tok, align 1
  %4 = sext i8 %3 to i32
  %5 = icmp eq i32 %4, 124
  br i1 %5, label %6, label %9

6:                                                ; preds = %2
  %7 = call i32 (...) @next()
  %8 = call i32 (...) @expr_xor()
  br label %2

9:                                                ; preds = %2
  ret void
}

declare dso_local i32 @expr_xor(...) #1

declare dso_local i32 @next(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
